# qtkeychainadapter

./: .gitmodules  CMakeLists.txt  README.md
src/qtkeychainadapter/: keychainservice.cpp  keychainservice.h
